Make app root configurable, avoids overlapp with api root, closes #15

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 <div id='content'>
 </div>
 <script src='http://localhost:8090/webpack-dev-server.js'></script>
+<script type='text/javascript' src='http://localhost:8090/assets/config.js'></script>
 <script type='text/javascript' src='http://localhost:8090/assets/molten.js'></script>
 </body>
 </html>
