--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
     <title>Molten Salt API UI</title>
-    <link rel="icon" type="image/png" href="/dist/favicon.png">
-    <link href='/dist/styles.css' rel='stylesheet' type='text/css'>
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
+    <link href='/assets/contrib/toastr.min.css' rel='stylesheet' type='text/css'>
+    <link href='/assets/contrib/animate.css' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
 </head>
 <body>
 <div id='content'>
 </div>
-<script type='text/javascript' src='/local/config.js'></script>
-<script type='text/javascript' src='/dist/molten.js'></script>
+<script type='text/javascript' src='/assets/config.js'></script>
+<script type='text/javascript' src='/assets/molten/molten.js'></script>
+<script type='text/javascript' src='/assets/contrib/toastr.min.js'></script>
 </body>
 </html>
